--- a/buttonpress/index.html
+++ b/buttonpress/index.html
@@ -76,6 +76,7 @@ Make sure you are clicking the right button, go too fast and you may misclick.
 
 <ul>
 <li>Checkmark circle: <a href=http://www.clipartlogo.com/image/ok-icon_231628.html">Checkmark Circle</a></li>
+Robot Blip: HTML5 UP
 </ul>
 </li>
 
