--- a/buttonpress/index.html
+++ b/buttonpress/index.html
@@ -76,7 +76,7 @@ Make sure you are clicking the right button, go too fast and you may misclick.
 
 <ul>
 <li>Checkmark circle: <a href=http://www.clipartlogo.com/image/ok-icon_231628.html">Checkmark Circle</a></li>
-Robot Blip: HTML5 UP
+<li>Robot Blip: <a href=http://soundbible.com/1682-Robot-Blip.html">Robot Blip</a></li>
 </ul>
 </li>
 
