--- a/organ revenge/index.html
+++ b/organ revenge/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Hello! Amaze!</title>
+    <title>Last Stand</title>
     <script src="js/phaser.js"></script>
     <script src="js/main.js"></script>
 
@@ -22,66 +22,67 @@ body
 <body>
 <div id="game"></div>
 <div id="readme">
-<h2>Your game title</h2>
+<h2>Last Stand</h2>
 <ul>
 
 <li><strong>High Concept:</strong>
-A one-sentence summary of your game.
+Avoid the hearts, you have one life, click to restart.
 </li>
 
 <li><strong>Theme:</strong>
-State which of the Storymatic themes you used.
+The hearts are fighting back against smoking, you mush survive. 
 </li>
 
 <li><strong>Mandated Variety:</strong>
-State which input, randomness, genre, and play style you used in this prototype.
+The spawns come from the side of the screen and their direction is fixed, but beyond that the spawn is random.
 </li>
 
 <li><strong>Player Experience Goals:</strong>
-What experience do you want players to have when playing your game?
+A quick few second game, if text was working then it would be to get the highscore.
 </li>
 
 <li><strong>Gameplay:</strong>
-A paragraph describing the actions the player can perform, the system dynamics, and the core mechanic. Include a concise explanation of the prototype’s inputs and their expected effects (how to play). You can also describe game play that is not in the prototype. You may include mock-up images for parts of the game not in the prototype.
+Arrow keys move the cigarette (you) around. Should you get hit by a heart you lose. Clicking restarts the game.
 </li>
 
 <li><strong>Prototype Goal:</strong>
-What game mechanic is this prototype evaluating?
+Collision physics and more phaser basics.
 </li>
 
 <li><strong>Features:</strong>
-What are the unique aspects of your game that set it apart?
+Nothing really besides the theme.
 </li>
 
 <li><strong>Setting/Premise:</strong>
-A paragraph about the world your game is set in and who the characters are. What makes the game world and its occupants unique and interesting? Do the tokens represent something? If the game has a backstory, put it here. If the game is abstract, then say so.
+In a world of organs, the brains are the ruling class and decision makers, while the hearts tend to be the workers. The brains created a synthetic life form called the cigarette. Cruel to the core they pushed around the brains and abused the hearts.
 </li>
 
 <li><strong>Story:</strong>
-If the game has a story (or you envision a story for the full game), summarize it in a paragraph. How will the dramatic tension interact with the gameplay tension?
+The hearts have begun to fight back against the cruel cigarettes. You play as a cigarette who does not want to be cruel, and just wants to live peacefully. Cursed by your birth as a cigarette, the hearts will come at you till you die.
 </li>
 
 <li><strong>Target Audience:</strong>
-A single sentence that describes the demographic you're trying to reach.
+People passing by on flash game sites.
 </li>
 
 <li><strong>Play Time:</strong>
-How long does your game take to play?
+10 seconds, max around 40 seconds
 </li>
 
 <li><strong>Strategies:</strong>
-What player strategies do you expect will be effective at playing this game?
+Skill and staying in the center to watch oncoming threats.
 </li>
 
 <li><strong>Prototype Assets:</strong>
 Did you make your prototype assets from scratch? Did you borrow them? Cite your sources here.
 <ul>
-<li>Bouncing Phaser image: <a href="https://phaser.io/download/logo">Phaser logo</a></li>
+<li>Heart: <a href="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcQ9XxrM-qUGABtpmkYxu2IfS42eq_R_QO6xBNlw4mMov8URf3X4Hw">Heart</a></li>
+<li>Cig: <a href="https://en.wikipedia.org/wiki/Cigarette">cig</a><li>
 </ul>
 </li>
 
 <li><strong>Prototype Closest Other Game:</strong>
-Which other game most closely resembles your game? If you are borrowing code from a Phaser Example, you must say so here. If you borrow code from elsewhere, you must say so here.
+Code was my own.
 </li>
 
 </ul>
