--- a/mastermind/index.html
+++ b/mastermind/index.html
@@ -76,7 +76,7 @@ What player strategies do you expect will be effective at playing this game?
 <li><strong>Prototype Assets:</strong>
 Did you make your prototype assets from scratch? Did you borrow them? Cite your sources here.
 <ul>
-<li>Bouncing Phaser image: <a href="https://phaser.io/download/logo">Phaser logo</a></li>
+<li>Base of Bomb: <a href="http://simpleicon.com/bomb.html">Bomb</a></li>
 </ul>
 </li>
 
