--- a/mastermind/index.html
+++ b/mastermind/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Hello! Amaze!</title>
+    <title>Ridler's Game</title>
     <script src="js/phaser.js"></script>
     <script src="js/main.js"></script>
 
@@ -22,31 +22,31 @@ body
 <body>
 <div id="game"></div>
 <div id="readme">
-<h2>Your game title</h2>
+<h2>Ridler's Game</h2>
 <ul>
 
 <li><strong>High Concept:</strong>
-A one-sentence summary of your game.
+Stop the Ridler's bomb by playing a game of mastermind
 </li>
 
 <li><strong>Theme:</strong>
-State which of the Storymatic themes you used.
+No Idea
 </li>
 
 <li><strong>Mandated Variety:</strong>
-State which input, randomness, genre, and play style you used in this prototype.
+Buttons, somewhat random, puzzle, guessing.
 </li>
 
 <li><strong>Player Experience Goals:</strong>
-What experience do you want players to have when playing your game?
+A somewhat challenging puzzle game requiring some thought.
 </li>
 
 <li><strong>Gameplay:</strong>
-A paragraph describing the actions the player can perform, the system dynamics, and the core mechanic. Include a concise explanation of the prototype’s inputs and their expected effects (how to play). You can also describe game play that is not in the prototype. You may include mock-up images for parts of the game not in the prototype.
+Click on the bottom left buttons to make a combination of 4 colors as a guess.
 </li>
 
 <li><strong>Prototype Goal:</strong>
-What game mechanic is this prototype evaluating?
+Game states and including more complex general code.
 </li>
 
 <li><strong>Features:</strong>
@@ -54,34 +54,35 @@ What are the unique aspects of your game that set it apart?
 </li>
 
 <li><strong>Setting/Premise:</strong>
-A paragraph about the world your game is set in and who the characters are. What makes the game world and its occupants unique and interesting? Do the tokens represent something? If the game has a backstory, put it here. If the game is abstract, then say so.
+Gotham
 </li>
 
 <li><strong>Story:</strong>
-If the game has a story (or you envision a story for the full game), summarize it in a paragraph. How will the dramatic tension interact with the gameplay tension?
+The Ridler loves his puzzles and will do whatever it takes to incorporate it in all of his plans. This time is no different with the bomb being connected to a game of Mastermind.
 </li>
 
 <li><strong>Target Audience:</strong>
-A single sentence that describes the demographic you're trying to reach.
+People love mastermind. I mean, who doesn't? Everyone is the target.
 </li>
 
 <li><strong>Play Time:</strong>
-How long does your game take to play?
+5-10 minutes.
 </li>
 
 <li><strong>Strategies:</strong>
-What player strategies do you expect will be effective at playing this game?
+There are many game theories to solve the code in an average of 4.5 turns. For general play though, finding the answer one by one, even choosing the wrong answer in order to check which answer is correct works. 
 </li>
 
 <li><strong>Prototype Assets:</strong>
 Did you make your prototype assets from scratch? Did you borrow them? Cite your sources here.
 <ul>
 <li>Base of Bomb: <a href="http://simpleicon.com/bomb.html">Bomb</a></li>
+<li>Explosion: <a href="https://en.wikipedia.org/wiki/Nuclear_explosion">explosion</a></li>
 </ul>
 </li>
 
 <li><strong>Prototype Closest Other Game:</strong>
-Which other game most closely resembles your game? If you are borrowing code from a Phaser Example, you must say so here. If you borrow code from elsewhere, you must say so here.
+Mastermind. "Hello Ariel" for making text on screen.  
 </li>
 
 </ul>
