--- a/mastermind/index.html
+++ b/mastermind/index.html
@@ -78,6 +78,7 @@ Did you make your prototype assets from scratch? Did you borrow them? Cite your 
 <ul>
 <li>Base of Bomb: <a href="http://simpleicon.com/bomb.html">Bomb</a></li>
 <li>Explosion: <a href="https://en.wikipedia.org/wiki/Nuclear_explosion">explosion</a></li>
+<li>Explosion sound: <a href="http://soundbible.com/1793-Flashbang.html">explosion</a></li>
 </ul>
 </li>
 
