--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ body
 <li><a href="buttonpress">Digital Assignment 1</a></li>
 <li><a href="organrevenge">Digital Assignment 2</a></li>
 <li><a href="mastermind">Digital Assignment 3</a></li>
+<li><a href="explorer">Digital Assignment 3</a></li>
 </ol>
 
 
