--- a/explorer2/index.html
+++ b/explorer2/index.html
@@ -96,7 +96,7 @@ Did you make your prototype assets from scratch? Did you borrow them? Cite your 
 Which other game most closely resembles your game? If you are borrowing code from a Phaser Example, you must say so here. If you borrow code from elsewhere, you must say so here.
 <li>I used the tilemap introduction: <a href="https://www.joshmorony.com/create-a-running-platformer-game-in-phaser-with-tilemaps/">here</a></li>
 <li>Previous version: <a href="https://madlydevoid.github.io/cs325-game-prototypes/explorer/">here</a></li>
-Changes: Added mini map, added map to start, added character select, added sprites+animations
+Changes: Added mini map, added map to start, added character select, added sprites+animations, added a trap cup, skeletons, and death. Added attacks and a death condition as well. Fixed the bottom walls collision too.
 </ul>
 </div>
 </body>
