--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ body
 <li><a href="mastermind">Digital Assignment 3</a></li>
 <li><a href="explorer">Digital Assignment 4</a></li>
 <li><a href="explorer2">Digital Assignment 5-itter</a></li>
+<li><a href="defender">Digital Assignment 6-bonus?</a></li>
 </ol>
 
 
