--- a/defender/index.html
+++ b/defender/index.html
@@ -26,11 +26,11 @@ body
 <ul>
 
 <li><strong>High Concept:</strong>
-A one-sentence summary of your game.
+Defend the man, up shoots, the shield blocks
 </li>
 
 <li><strong>Theme:</strong>
-State which of the Storymatic themes you used.
+Defender
 </li>
 
 <li><strong>Mandated Variety:</strong>
@@ -38,19 +38,19 @@ State which input, randomness, genre, and play style you used in this prototype.
 </li>
 
 <li><strong>Player Experience Goals:</strong>
-What experience do you want players to have when playing your game?
+A quick few plays of a simple game
 </li>
 
 <li><strong>Gameplay:</strong>
-A paragraph describing the actions the player can perform, the system dynamics, and the core mechanic. Include a concise explanation of the prototype’s inputs and their expected effects (how to play). You can also describe game play that is not in the prototype. You may include mock-up images for parts of the game not in the prototype.
+rotate the shield and man using left/right, shoot with up. The shield bounces the incoming balls
 </li>
 
 <li><strong>Prototype Goal:</strong>
-What game mechanic is this prototype evaluating?
+None really
 </li>
 
 <li><strong>Features:</strong>
-What are the unique aspects of your game that set it apart?
+offset bullets?
 </li>
 
 <li><strong>Setting/Premise:</strong>
@@ -62,21 +62,21 @@ If the game has a story (or you envision a story for the full game), summarize i
 </li>
 
 <li><strong>Target Audience:</strong>
-A single sentence that describes the demographic you're trying to reach.
+People on flash sites
 </li>
 
 <li><strong>Play Time:</strong>
-How long does your game take to play?
+30 seconds depending on skill
 </li>
 
 <li><strong>Strategies:</strong>
-What player strategies do you expect will be effective at playing this game?
+No idea
 </li>
 
 <li><strong>Prototype Assets:</strong>
 Did you make your prototype assets from scratch? Did you borrow them? Cite your sources here.
 <ul>
-<li>Bouncing Phaser image: <a href="https://phaser.io/download/logo">Phaser logo</a></li>
+<li>man: <a href="http://4.bp.blogspot.com/-Ablc3Duh4aI/T3kX84-1u3I/AAAAAAAAA40/YlZjHvwl8r8/s1600/tutorial_sample31c.jpg">man</a></li>
 </ul>
 </li>
 
