--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ body
 <li><a href="explorer">Digital Assignment 4</a></li>
 <li><a href="explorer2">Digital Assignment 5-itter</a></li>
 <li><a href="defender">Digital Assignment 6-bonus?</a></li>
+<li><a href="WarStrat">Digital Assignment 7</a></li>
 </ol>
 
 
