--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@ body
 {
     margin-top: 10px;
 }
+.pics{
+	width: 100px;
+}
+.picborder{
+	border-color: blue;
+    border-width: 4px;
+    border-style: solid;
+}
 </style>
 
 </head>
@@ -31,8 +39,31 @@ body
 <li><a href="explorer2">Digital Assignment 5-itter</a></li>
 <li><a href="defender">Digital Assignment 6-bonus?</a></li>
 <li><a href="WarStrat">Digital Assignment 7</a></li>
+<li><a href="WarStratItr">Digital Assignment 8-itter</a></li>
+<li><a href="WarStratItr">Digital Assignment 9</a></li>
+<li><a href="WarStratItr">Digital Assignment 10</a></li>
 </ol>
-
+<a href="buttonpress">
+  <img class="pics picborder" src="gamepics/game1pic.png" alt="image of game one">
+</a>
+<a href="organrevenge">
+  <img class="pics picborder" src="gamepics/game2pic.png" alt="image of game two">
+</a>
+<a href="mastermind">
+  <img class="pics picborder" src="gamepics/game3pic.png" alt="image of game three">
+</a>
+<a href="explorer">
+  <img class="pics picborder" src="gamepics/game4pic.png" alt="image of game four">
+</a>
+<a href="explorer2">
+  <img class="pics picborder" src="gamepics/game5pic.png" alt="image of game five">
+</a>
+<a href="defender">
+  <img class="pics picborder" src="gamepics/game6pic.png" alt="image of game six">
+</a>
+<a href="warStrat">
+  <img class="pics picborder" src="gamepics/game7pic.png" alt="image of game seven">
+</a>
 
 <p>Here are the templates:
 
