--- a/index.html
+++ b/index.html
@@ -61,10 +61,12 @@ body
 <a href="defender">
   <img class="pics picborder" src="gamepics/game6pic.png" alt="image of game six">
 </a>
-<a href="warStrat">
+<a href="WarStrat">
   <img class="pics picborder" src="gamepics/game7pic.png" alt="image of game seven">
 </a>
-
+<a href="WarStratItr">
+  <img class="pics picborder" src="gamepics/game7pic.png" alt="image of game seven">
+</a>
 <p>Here are the templates:
 
 <ul>
