--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@ body
 	width: 100px;
 }
 .picborder{
-	border-color: blue;
-    border-width: 4px;
+	border-color: black;
+    border-width: 2px;
     border-style: solid;
 }
 </style>
@@ -37,7 +37,7 @@ body
 <li><a href="mastermind">Digital Assignment 3</a></li>
 <li><a href="explorer">Digital Assignment 4</a></li>
 <li><a href="explorer2">Digital Assignment 5-itter</a></li>
-<li><a href="defender">Digital Assignment 6-bonus?</a></li>
+<li><a href="defender">Digital Assignment 6-bonus</a></li>
 <li><a href="WarStrat">Digital Assignment 7</a></li>
 <li><a href="WarStratItr">Digital Assignment 8-itter</a></li>
 <li><a href="WarStratItr">Digital Assignment 9</a></li>
