--- a/index.html
+++ b/index.html
@@ -29,20 +29,6 @@ body
 
 <h1>CS 325 Game Prototypes</h1>
 
-<p>I am making creative and experimental game prototypes! Here is the list of them:
-
-<ol>
-<li><a href="buttonpress">Digital Assignment 1</a></li>
-<li><a href="organrevenge">Digital Assignment 2</a></li>
-<li><a href="mastermind">Digital Assignment 3</a></li>
-<li><a href="explorer">Digital Assignment 4</a></li>
-<li><a href="explorer2">Digital Assignment 5-itter</a></li>
-<li><a href="defender">Digital Assignment 6-bonus</a></li>
-<li><a href="WarStrat">Digital Assignment 7</a></li>
-<li><a href="WarStratItr">Digital Assignment 8-itter</a></li>
-<li><a href="WarStratItr">Digital Assignment 9</a></li>
-<li><a href="WarStratItr">Digital Assignment 10</a></li>
-</ol>
 <a href="buttonpress">
   <img class="pics picborder" src="gamepics/game1pic.png" alt="image of game one">
 </a>
@@ -67,6 +53,21 @@ body
 <a href="WarStratItr">
   <img class="pics picborder" src="gamepics/game7pic.png" alt="image of game seven">
 </a>
+<p>I am making creative and experimental game prototypes! Here is the list of them:
+
+<ol>
+<li><a href="buttonpress">Digital Assignment 1</a></li>
+<li><a href="organrevenge">Digital Assignment 2</a></li>
+<li><a href="mastermind">Digital Assignment 3</a></li>
+<li><a href="explorer">Digital Assignment 4</a></li>
+<li><a href="explorer2">Digital Assignment 5-itter</a></li>
+<li><a href="defender">Digital Assignment 6-bonus</a></li>
+<li><a href="WarStrat">Digital Assignment 7</a></li>
+<li><a href="WarStratItr">Digital Assignment 8-itter</a></li>
+<li><a href="WarStratItr">Digital Assignment 9 (holder)</a></li>
+<li><a href="WarStratItr">Digital Assignment 10 (holder)</a></li>
+</ol>
+
 <p>Here are the templates:
 
 <ul>
