--- a/WarStratItr/index.html
+++ b/WarStratItr/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Hello! Amaze!</title>
+    <title>War Strat- Iter</title>
     <script src="js/phaser.js"></script>
     <script src="js/main.js"></script>
 
@@ -82,13 +82,16 @@ Did you make your prototype assets from scratch? Did you borrow them? Cite your 
 <li>solider: <a href="http://callofduty.wikia.com/wiki/File:Soldier_sprite_DOA_BO.png">solider</a></li>
 <li>scout: <a href="http://www.deviantart.com/morelikethis/130603859">scout</a></li>
 <li>knight: <a href="http://www.quiztron.com/tests/sniper_joe_quiz_35685.htm">knight</a></li>
+<li>All Sounds came from Soundbible</li>
 </ul>
 </li>
 
 <li><strong>Prototype Closest Other Game:</strong>
 Which other game most closely resembles your game? If you are borrowing code from a Phaser Example, you must say so here. If you borrow code from elsewhere, you must say so here.
 </li>
-
+<li><strong>Updates:</strong>
+Added in sounds as well as more instructions at the start. Gave units unique abilities which seems to throw off balance but gives more flavor. Made it so that like the instructions said the first player has half the movement for turn one. Increased the speed of the tanks. Other plans had to be scrapped as it just resulted in a lot of broken code. 
+</li>
 </ul>
 </div>
 </body>
