--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ body
 <li><a href="defender">Digital Assignment 6-bonus</a></li>
 <li><a href="WarStrat">Digital Assignment 7</a></li>
 <li><a href="WarStratItr">Digital Assignment 8-itter</a></li>
-<li><a href="WarStratItr">Digital Assignment 9 (holder)</a></li>
+<li>pass</li>
 <li><a href="WarStratItr">Digital Assignment 10 (holder)</a></li>
 </ol>
 
