--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ body
 <li><a href="WarStrat">Digital Assignment 7</a></li>
 <li><a href="WarStratItr">Digital Assignment 8-itter</a></li>
 <li>pass</li>
-<li><a href="WarStratItr">Digital Assignment 10 (holder)</a></li>
+<li>pass</li>
 </ol>
 
 <p>Here are the templates:
